This file contains a list of new features and capabilities by TMDA
version.  These blurbs are what are usually included in release
announcements under "What's new?".  Make sure to read the UPGRADE
file in this directory as well.

======================================================================

TMDA 1.1.11 "Ladyburn" --

* Virtual domain improvements to tmda-pending courtesy of Lloyd
  Zusman. A '--vhost-script' command-line option has been added to
  match tmda-ofmipd and tmda-filter. Also two new options have been
  added, '--vhost-user' and '--vhost-domain'. See the tmda-pending
  --help output for more information, or for greater detail, see
  http://article.gmane.org/gmane.mail.spam.tmda.devel/6584

* An alternative "simpler" example of how to use TLS with tmda-ofmipd
  via stunnel has been added. See the contrib/ofmipd-stunnel-daemons/
  directory.

======================================================================

TMDA 1.1.10 "Killyloch" --

* New feature. When a message is released from your pending queue via
  tmda-cgi, a new trace header 'X-TMDA-CGI' is added to the message
  which contains both the IP address of the remote host as well as the
  browser the client used to send the request.  This allows you to
  visually discern that the message was released via tmda-cgi rather
  than through email confirmation, and also allows for easier tracing.

* tmda-ofmipd has a new option courtesy of Robert P. Thille.  `-L'
  turns on logging prints which logs everything that `-d' logs, except
  for the raw SMTP protocol data. Hence, it is useful if you want to
  leave logging enabled permanently, but don't want your logs bloated
  with AUTH data and/or the content of large attachments.

* tmda-ofmipd bugfixes and improvements from Stephen Warren.

======================================================================

TMDA 1.1.9 "Jura" --

* New feature courtesy of Mark Horn. ACTION_EXPIRED_DATED has been