@@ -1,3 +1,11 @@
+2007-02-23  Jason R. Mastaler  <jason@mastaler.com>
+
+	* Util.py (format_timeout): Use Defaults.TIMEOUT_UNITS.
+
+	* Defaults.py: (TIMEOUT_UNITS): New variable to give users the
+	ability to customize the timeout strings for languages other than
+	English. Contributed by Vitor Espindola.
+
 2006-12-07  Jason R. Mastaler  <jason@mastaler.com>
 
 	* Pending.py (Message.release): Add the IP address and browser
